Modals - Dropdown List Overflow Bug
Bug wherein if the dropdown list is too long, turns the extended bottom part of the modal to a blue background color, now fixed.

- JV

--- a/css/styles.css
+++ b/css/styles.css
@@ -220,7 +220,6 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);   
-    background-color: blue;
     width: min(95vw, 600px);
     max-height: 90vh;
     overflow-y: auto;
